# col_rivera_use_case_demo

./: .gitignore  pyproject.toml
claud_requests/Notes/: notes_from_excel.md
claude_requests/Notes/: create_pivot_table.md  create_synthetic_data.md  notes_from_excel.md  research_reconciliation_algorithm.md  research_reconciliation_ui.md  solution_notes_for_reconciliation.md
data/: budget_data_reconciliation_ui.md  synthetic_data_green_side.xlsx
local_notebook/: create_open_system_data.py  create_synthetic_data.py  create_synthetic_template.py  reconcile_om_afr.py  regenerate_all_green.py  regenerate_om_afr_green.py  verify_all_rollups.py  verify_reconciliation.py
ui_reconciliation/: app.py  reconciler.py
