[project]
name = "col-rivera-use-case-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.3"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "numpy>=2.1.3,<3",
    "openpyxl>=3.1.5",
    "ortools>=9.15.6755",
    "pandas==2.2.3",
    "streamlit>=1.58.0",
]
